tests/errors/arrays/indexer-call-ambiguous.fn
---
Description: Ambiguous overload selection between equally good constructor candidates
Expected: FN3400
---



type Vector2
{
    x: f32
    y: f32

    op [](vec: Vector2, index: i32) -> f32
    {
        return 0.0
    }

    op [](vec: Vector2, index: f32) -> f32
    {
        return 0.0
    }
}


type Program
{
    static fn Main -> i32
    {
        var v = Vector2(1, 2)
        var x = v[0u8]
        return 0
    }
}
